fixed header size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -480,6 +480,9 @@ textarea {
   .orbit-container .orbit-slides-container {
 	  height: 125px;
   }
+  .top-bar .name h1 img {
+	  max-width: 150px;
+  }
 }
 
 @media only screen and (min-width: 481px) and (max-width: 650px) {
